--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Vamos a crear un blog post</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Distinctio rem consectetur aut laudantium? Itaque corporis, <br> omnis voluptate non consequuntur maxime recusandae possimus, <br> nam enim asperiores dolore. <br> Neque necessitatibus ipsum sapiente!</p>
+    <div id="container">
+        <div id="post">
+            <h1>Vamos a crear un blog post</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Distinctio rem consectetur aut laudantium? Itaque corporis, <br> omnis voluptate non consequuntur maxime recusandae possimus, <br> nam enim asperiores dolore. <br> Neque necessitatibus ipsum sapiente!</p>
+        </div>
+    </div>
 </body>
 </html>
