--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Meu Blog
+            <span id="tagline">
+                Un blog tech
+            </span>
         </div>
         <div id="post">
             <h1>Vamos a crear un blog post</h1>
