--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Vamos a crear un blog post</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Distinctio rem consectetur aut laudantium? Itaque corporis, <br> omnis voluptate non consequuntur maxime recusandae possimus, <br> nam enim asperiores dolore. <br> Neque necessitatibus ipsum sapiente!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Non dolorum eos cupiditate error, animi vel aspernatur autem <br> ipsum aliquam fuga maxime exercitationem repudiandae <br> mollitia laboriosam ducimus, ipsa dolore quam sint?</p>
         </div>
     </div>
 </body>
