--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Meu Blog
             <span id="tagline">
-                Un blog tech
+                Un blog tech en producción
             </span>
         </div>
         <div id="post">
